<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MySimpleTwitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_time_line">Home</string>
    <string name="screen_name">\@foo</string>
    <string name="tweet">Tweet</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="email">Email</string>
    <string name="tweet_body">This is the tweet body</string>
    <string name="name">name</string>
    <string name="tweets_profile">TWEETS</string>
    <string name="following_profile">FOLLOWING</string>
    <string name="follower_profile">FOLLOWERS</string>
    <string name="reply_label">reply</string>
    <string name="title_activity_tweet_detail">Tweet Detail</string>
    <string name="title_activity_compose">ComposeActivity</string>

</resources>