<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/iPostTweet"
          android:title="@string/tweet"
          android:showAsAction="always"
          android:onClick="onPostTweet"
          android:icon="@drawable/ic_tweet_white"/>

    <item android:id="@+id/iProfile"
          android:title="@string/profile"
          android:showAsAction="always"
          android:onClick="onProfileView"
          android:icon="@drawable/ic_profile"/>

    <item android:id="@+id/iEmail"
        android:title="@string/email"
        android:showAsAction="always"
        android:icon="@drawable/ic_email"/>

    <!-- android:showAsAction="ifRoom|collapseActionView" -->
    <item android:id="@+id/action_search"
        android:title="SearchBar"
        android:icon="@drawable/ic_search"
        android:showAsAction="always"
        android:actionViewClass="android.widget.SearchView" />

</menu>
