<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_launcher"
        android:id="@+id/ivProfileImage"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/tvName"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:textSize="12dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImage"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_name"
        android:textSize="8dp"
        android:id="@+id/tvScreenName"
        android:layout_alignBottom="@+id/tvName"
        android:layout_marginLeft="1dp"
        android:textColor="#8899a6"
        android:layout_toRightOf="@+id/tvName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_body"
        android:id="@+id/tvBody"
        android:layout_marginLeft="5dp"
        android:textSize="12dp"
        android:autoLink="all"
        android:linksClickable="true"
        android:focusable="false"
        android:layout_below="@+id/tvName"
        android:layout_toRightOf="@+id/ivProfileImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textSize="12dp"
        android:paddingTop="2dp"
        android:paddingRight="5dp"
        android:id="@+id/tvCreateAt"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#8899a6"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivBody"
        android:layout_below="@+id/tvBody"
        android:layout_alignLeft="@+id/tvBody"
        android:layout_alignStart="@+id/tvBody"
        android:layout_toLeftOf="@+id/tvCreateAt" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:id="@+id/btReply"
        android:background="@drawable/ic_reply"
        android:layout_alignLeft="@+id/ivBody"
        android:layout_alignStart="@+id/ivBody"
        android:layout_below="@+id/ivBody" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="13dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tvReply"
        android:textSize="10dp"
        android:layout_below="@+id/ivBody"
        android:textColor="#8899a6"
        android:layout_toRightOf="@+id/btReply" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:id="@+id/btRetweet"
        android:background="@drawable/ic_retweetcount"
        android:layout_below="@+id/ivBody"
        android:layout_toRightOf="@+id/tvReply" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="13dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tvRetweet"
        android:textColor="#8899a6"
        android:textSize="10dp"
        android:layout_below="@+id/ivBody"
        android:layout_toRightOf="@+id/btRetweet" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:id="@+id/btFavorite"
        android:background="@drawable/ic_favoritecount"
        android:layout_below="@+id/ivBody"
        android:layout_toRightOf="@+id/tvRetweet" />

    <TextView
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tvFavorite"
        android:textColor="#8899a6"
        android:textSize="10dp"
        android:layout_below="@+id/ivBody"
        android:layout_toRightOf="@+id/btFavorite" />

    <!--
    <ImageView
        android:layout_width="11dp"
        android:layout_height="11dp"
        android:id="@+id/ivReply"
        android:src="@drawable/ic_reply" />

        -->

</RelativeLayout>
